bindata/routes/console-redirect-route.yaml
# This 'console' route manifest is used in case a custom console route is set
# either on the ingress config or console-operator config.
# The 'console' route will be used for redirect to the 'console-custom' route
# by the console backend.
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console
  namespace: openshift-console
  labels:
    app: console
spec:
  to:
    kind: Service
    name: console-redirect
    weight: 100
  port:
    targetPort: custom-route-redirect
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
